required changes for users to migrate from one version of MapServer to the
next.  Developers are strongly encouraged to document their changes and
their impacts on the users here.  (Please add the most recent changes to 
the top of the list.)

For a complete change history, please see the Subversion log comments.

Current Version (SVN trunk):
----------------------------

- Set dependency on libxml2 when building --with-wfs (#3512)

- Fixed TRUE is undefined in shptreevis (#3545)

- shptreevis: bug truncates visualization shapefile if there are more
  nodes in the tree than there are shapes being indexed! 

- Fixed multiple include tags not supported in xml mapfiles (#3530)

- Support reading .dbf files between 2GB and 4GB (#3514)

- Avoid warnings about ms_cvsid being unused with gcc. 

- Ensure the class is not marked BeforeFieldInit causing memory corruption with C#/CLR4 (#3438)

- Fixed MSSQL2008 driver returning invalid extent (#3498)

- Added coordinate scaling to shpxy tag via parameters scale, scale_x or scale_y.

- Fix computation of shape bounds when the first line contains no points
  (#3119)(fixes #3383)

- Allow map relative specification in the PROJ_LIB config item (#3094)

- Try to report reprojection errors in SLD Filter evaluation (#3495)

- Disabled some insecure (and potentially exploitable) mapserv command-line
  debug arguments (#3485). The --enable-cgi-cl-debug-args configure switch
  can be used to re-enable them for devs who really cannot get away without
  them and who understand the potential security risk (not recommended for 
  production servers or those who don't understand the security implications).

- Fixed segmentation fault in ogr driver when shape type is null 

- Fixed synchronized MS_UNITS and inchesPerUnits array (#3173) 

- Fixed possible buffer overflow in msTmpFile() (#3484)

- Fixed Using STYLEITEM AUTO, loadExpression fails when the label text contains a double quote (#3481)
